[package]
name = "xdp-api-guard-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-api-guard-common = { path = "../xdp-api-guard-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

network-types = "0.0.5"
[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-api-guard"
path = "src/main.rs"
